doc/Grammar.txt
<Program> ::= <Statement> <Program> | <Statement>

<Statement> ::= <If> | <While> | <Variable_init>

//-----------------------------------------------------------------

<If> ::= "if" "(" <Bool> ")" "{" <Statement> "}" ["else" "{" <Statement> "}"]
<While> ::= "while" "(" <Bool> ")" "{" <Statement> "}"

//-----------------------------------------------------------------

<Bool> ::= <Bool_1> <Compare_operator> <Bool_1>
<Bool_1> ::= <Math_expression> | <Variable> 
<Compare_operator> ::= "==" | "!=" | "<" | ">" | "<=" | ">="

//-----------------------------------------------------------------

<Variable_init> ::= <Type> <Assignment> | <Assignment>
<Type> ::= "int" | "double"
<Assignment> ::= <Variable> "=" <Math_expression> ";"
<Variable> ::= <Name>

//-----------------------------------------------------------------

<Math_expression> ::=  <Math_op3> [("+" | "-") <Math_expression>] | <Math_op3>
<Math_op3> ::=  <Math_op2> [("*" | "/") <Math_op3>] | <Math_op2>
<Math_op2> ::=  <Math_op1> ["^" <Math_op2>] | <Math_op1>
<Math_op1> ::= "(" <Math_expression> ")" | <Number> | <Variable>

<Name> ::= {<Letter>}

<Number> ::= ["-"] {<Digit>} ["." {Digit}]

//-----------------------------------------------------------------

<Digit> ::= 
"0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<Letter> ::= 
"A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | 
"N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" |
"a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | 
"n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"

<Symbol> ::= "(" | ")" | ";" | "=" | "-" | "."

//-----------------------------------------------------------------
